--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "express": "^4.17.1",
+    "nodemon": "^2.0.3",
     "path": "^0.12.7"
   }
 }
